# setupdocx

./: MANIFEST.in  README.md  RELEASE-INFO.sh  setenv-acue2.sh  setenv-acue3.sh  setenv.bat  setenv.sh  setup.cfg  setup.py
doc/en/setupdocx/: MITLicense.html  ModifiedArtisticLicense20.html  call_apidoc.html  call_apiref.html  call_doc.html  call_sphinx_apidoc.html  call_sphinx_build.html  genindex.html  index.html  index_application.html  index_documentation.html  index_modules.html  index_part_abstract.html  index_part_apiref_scaled.html  index_part_blueprint.html  index_part_cockpit.html  index_part_documents.html  index_part_indices.html  index_part_license.html  index_part_platform_support.html  index_part_resources.html  index_starthere.html  install.html  libbash.html  make_bat.html  makefile.html  objects.inv  project.html  py-modindex.html  quickstart.html  references.html  search.html  searchindex.js  setup_conf.html  setup_extensions.html  setup_platforms_build_target.html  setupdocx.build_apiref.html  setupdocx.build_docx.html  setupdocx.dist_docx.html  setupdocx.html  (+7 more)
doc/en/setupdocx/_modules/: index.html  setupdocx.html
doc/en/setupdocx/_sources/: call_apidoc.rst.txt  call_apiref.rst.txt  index.rst.txt  index_part_abstract.rst.txt  index_part_apiref_scaled.rst.txt  index_part_blueprint.rst.txt  index_part_cockpit.rst.txt  index_part_resources.rst.txt  makefile.rst.txt  project.rst.txt  quickstart.rst.txt  references.rst.txt  setup_extensions.rst.txt  setup_platforms_build_target.rst.txt  setupdocx.build_apiref.rst.txt  setupdocx.dist_docx.rst.txt  setupdocx.install_docx.rst.txt  setupdocx.rst.txt  setupdocx.setup.rst.txt  setupdocx.sphinx.ext.literalincludewrap.rst.txt  setuplib_cli.rst.txt  setuptools_commands.rst.txt
doc/en/setupdocx/_static/: call_apidoc.sh  call_doc.sh  call_epydoc.sh  setup.cfg
doc/en/setupdocx/configurations/: index.html
doc/en/setupdocx/faq/: faq_basic.html  faq_target_doc.html  index.html
doc/en/setupdocx/howto/: conf_templates_create.html  conf_templates_use.html  create_doc.html  howto_apidoc_and_doc.html  howto_apidoc_ony.html  howto_apiref_ony.html  howto_epub.html  howto_html.html  howto_integrate_apiref.html  howto_jython.html  howto_man.html  howto_pdf.html  howto_pydoc2.html  howto_pydoc3.html  howto_rtd.html  howto_rtd_github.html  howto_rtd_mkdocs.html  howto_rtd_sphinx.html  howto_singlehtml.html  howto_verbose_and_quiet.html  index.html  install_doc.html  package_doc.html
docsrc/: call_doc.rst  call_sphinx_apidoc.rst  call_sphinx_build.rst  index.rst  index_modules.rst  index_part_documents.rst  index_part_indices.rst  index_part_platform_support.rst  install.rst  libbash.rst  make_bat.rst  references.rst  setup_conf.rst  setupdocx.build_docx.rst  setupdocx.sphinx.ext.imagewrap.rst  sw_design.rst
docsrc/_static/: Makefile_docx  capabilities.json  libbash.sh  profile_info.html  setup.py
docsrc/configurations/: index.rst
docsrc/configurations/epydoc/epydoc_sphinx_template/: index.rst
docsrc/configurations/sphinx/bizstyle/: index.rst
docsrc/configurations/sphinx/default/: index.rst
docsrc/configurations/sphinx/extended_default/: index.rst
docsrc/configurations/sphinx/guzzle_sphinx_theme/: index.rst
docsrc/configurations/sphinx/html/: index.rst
docsrc/configurations/sphinx/man/: index.rst
docsrc/configurations/sphinx/pydoc2/: index.rst
docsrc/configurations/sphinx/sphinx_rtd_theme_single/: index.rst
docsrc/configurations/sphinx/sphinxdoc/: index.rst
docsrc/configurations/sphinx/traditional/: index.rst
docsrc/faq/: faq_basic.rst  index.rst
docsrc/howto/: conf_templates_create.rst  howto_apidoc_and_doc.rst  howto_apiref_ony.rst  howto_html.rst  howto_jython.rst  howto_pdf.rst  howto_rtd.rst  howto_rtd_sphinx.rst  index.rst  install_doc.rst  package_doc.rst
docsrc/images/: component-structure.vsd  components.vsd  data.vsd  document-flow-01.01.001.vsd  document-flow-01.01.002.vsd  document-flow-01.01.003.vsd  document-flow.vsd  interworking-sequence.VSD  quickstart-flow.vsd  setupdocx-components-01.01.001.vsd  setupdocx-components.vsd  setuplib-architecture.vsd  source-dir-tree-docbook.vsd  source-dir-tree-mkdocs.vsd  source-dir-tree-sphinx.vsd  source-dir-tree.vsd  sphinx-extensions.vsd  systems-ids.vsd  used-classes-01.01.001.vsd  used-classes-01.01.002.vsd  used-classes-01.01.003.vsd  used-classes.vsd
dummy/: __init__.py
publish/: bitbucket-deploy.sh-todo  dot_gitignore  github-deploy.sh  github-network-connect.sh  pypi-deploy.sh  pypi-network-connect.sh  sourceforge-deploy.sh  sourceforge-network-connect.sh  sourceforge-shell.sh
setupdocx/: __init__.py  build_apidoc.py  build_apiref-for-mod.py  build_apiref.py  build_apiref3.py  build_docx.py  dist_docx.py  install_docx.py  libbash.sh
setupdocx/builder/: README.md
setupdocx/builder/epydoc/: README.md  call_apiref.sh  capabilities.json
setupdocx/builder/sphinx/: Makefile_docx  README.md  call_apidoc.sh  call_doc.sh  capabilities.json
setupdocx/config/: README.md
setupdocx/sphinx/ext/: imagewrap.py  literalincludewrap.py
testdata/setupdocx/: __init__.py
testdata/setupdocx/figurewrapper/: conf.py  index.rst
testdata/setupdocx/imagewrapper/: conf.py  index.rst
testdata/setupdocx/literalincludewrap/: build.sh  conf.py  index.rst
testdata/setupdocx/templates/config/sphinx/rtd/docsrc/_static/: setup.cfg
(+190 files in other folders)
