
[build_docx]
#
# the static configuration options, these serve as defaults when the corresponding
# command line option is present 
#

# activates --apiref  
# apiref = 


# default: search(<conf-dir>, <configdir>, <docsrc>/conf)/call_apidoc.sh
# build-apidoc =  


# default:search(<conf-dir>, <configdir>, <docsrc>/conf)/call_apiref.sh
# build_apiref = 


# default:search(<conf-dir>, <configdir>, <docsrc>/conf)/call_doc.sh
# build_doc = 


# root of the build directory
# build_dir = build/


# cleans old output
# clean = False


# configuration directory
# conf_dir = <docsource>/conf/


# attribute of derived class <<self.name>>
# docname = setupdocx


# document source
# docsource = docsrc/


# created document type
# see --help-doctypes
# doctype = html


# top index file to be used as replacement for the document
# indexsrc = docsrc/index.rst


# attribute of derived class <<self.name>>
# name = setupdocx


# <year>.<month>.<day>
# release = test-release 


# path list of source directories to be processed by call_apidoc.sh and call_apiref.sh
# the syntax is a semicolon separated list, e.g.:
#
#   srcdir = setupdocx;bin
#
# srcdir = setupdocx;bin;utilities


# the document version
# version=  



[install_docx]
#
# installs form a directory - by default 
#

# package name, changes <<self.name>> of the instance of install_docx
# resulting in the created document <build-dir>/apidoc/<name-or-docname>
# name = <<self.name>>


# installation source tree
# build-dir = build/


# document name, could be different from --name,
# used as the input and the output name of the document
# resulting in the created document <build-dir>/apidoc/<name-or-docname>
# docname = <self.name> 


# installation target directory, PEP-370, user data directory
# dist-dir = /user/data/ + doc/en/html/man3


# document type to install
# see --help-doctypes
# doctype = html 


# print only, do not execute
# no-exec = 0


# debug flag, higher numbers raise level
# debug = 0


# verbose flag, higher numbers raise level
# verbose = 0


[dist_docx]

# append files to existing archive, default: create new
# can be used to add new unpack-dir
# append = 


# document source location
# build-dir = build/


# debug flag
# debug = 0


# document type to pack
# see --help-doctypes
# doctype = html


# type of the created package
# see --help-formats
# format = zip


# changes package name
# name = <self.name>


# input package name
# name-in = <self.name>


# output package name
# name-out = <self.name>


# sets version of created archive, else date
# set-version = <year>.<month>.<day>


# archive location for creation
# dist-dir = dist/


#
# name of prefix directory to unpack to, also archive prefix,
# relative subdirectories only,
#
#   self.release = <self.name>-doc-<self.doctype>-<self.version>
#
# for example setupdocx-doc-html-20190501
#
# unpack-dir = self.release



[build_apiref]
#
# the static configuration options, these serve as defaults when the corresponding
# command line option is present 
#

# default:search(<conf-dir>, <configdir>, <docsrc>/conf)/call_apiref.sh
# build_apiref = 


# root of the build directory
# build_dir = build/


# cleans old output
# clean = False


# configuration directory
# conf_dir = <docsource>/conf/


# attribute of derived class <<self.name>>
# docname = setupdocx


# document source
# docsource = docsrc/


# created document type
# see --help-doctypes
# doctype = html


# attribute of derived class <<self.name>>
# name = setupdocx


# <year>.<month>.<day>
# release = test-release 


# path list of source directories to be processed by call_apidoc.sh and call_apiref.sh
# the syntax is a semicolon separated list, e.g.:
#
#   srcdir = setupdocx;bin
#
# srcdir = setupdocx;bin;utilities


# the document version
# version=  


[metadata]
#
# some minor static metadata are located here, while the main metada remains in 'setup.py', 
# in particular the combined and dynamic evaluated parameters 
#

# maintainer
maintainer = acue


# maintainer email
maintainer_email = acue_sf2@sourceforge.net


# keywords
keywords = ARM
    Aix
    Alpine
    AlpineLinux
    Arch
    ArchLinux
    ArchLinuxARM
    Armbian
    BSD
    BlackArch
    BlackArchLinux
    CPython
    CentOS
    Cygwin
    Darwi
    Debian
    DragonFlyBSD
    Fedora
    FreeBSD
    Gentoo
    HP-UX
    IPython
    IronPython
    Java
    Java
    Jython
    Kali
    KaliLinux
    Linux
    MacOS
    Minix
    Minx3
    NetBSD
    OS-X
    OpenBSD
    OpenSUSE
    OpenWRT
    PyPy
    Python2
    Python3
    RHEL
    Raspbian
    ReactOS
    SLES
    Scientific
    ScientificLinux
    Scriptin
    SnowLeopard
    Solaris
    Sphinx
    sphinx-apidoc
    sphinx-build
    SuSE
    SunOS
    SunOS5
    Ubuntu
    Unix
    WSL
    WSL 1.0
    WSL 2.0
    WSL-1.0
    WSL-2.0
    Windows
    Windows10
    Windows2003
    Windows2008
    Windows2010
    Windows2012
    Windows2016
    Windows2019
    Windows2019se
    Windows7
    Windows8
    WindowsXP
    bitarray
    bitmask
    build_docx
    distutils
    doc
    documentation
    docx
    epydoc
    extension
    hexvalue
    setup
    setup
    setup.py
    setuptools
    sphinx
    sphinx-apidoc
    sphinx-build

